corrected the alignment of the emelents to look like the plan of the project

--- a/react-portfolio/src/scss/components/_homeHeader.scss
+++ b/react-portfolio/src/scss/components/_homeHeader.scss
@@ -3,34 +3,35 @@
 
 .home-header-container {
   display: flex;
-  justify-content: space-between;
   align-items: center;
   width: 100%;
+  height: 100%;
+
   position: relative;
   font-family: $font-base;
 
   .header-left {
-    flex: 1;
+    width: 55%;
     position: relative;
     overflow: hidden;
 
     .home-header-image {
-      height: auto;
-      max-width: 100%;
-      width: 1100px;
+      width: 140%;
+      height: 100%;
+      object-fit: cover;
       position: relative;
-      left: -325px;
+      left: -200px;
     }
   }
 
   .header-right {
-    flex: 1;
+    width: 45%;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
     position: absolute;
     top: 20px;
-    right: 20px;
+    right: 200px;
 
     nav {
       display: flex;
