--- a/react-portfolio/src/scss/main.scss
+++ b/react-portfolio/src/scss/main.scss
@@ -3,7 +3,7 @@
 @import "./colors";
 
 @import "./components/homeHeader";
-
-// * {
-//   border: 1px blue dashed;
-// }
+@import "./components/homeMain";
+* {
+  border: 1px blue dashed;
+}
